# vorbis-rs

./: COPYING  Cargo.toml  README.md
vorbis/: Cargo.toml
vorbis-lewton/: Cargo.toml
vorbis-sys/: Cargo.toml  build.rs  vorbis_sys.h
vorbis-sys/src/: lib.rs
